# nullius

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
examples/: 01_planted_lookahead.py  02_placebo_vs_real_signal.py  03_pbo_of_a_gridsearch.py  04_forecast_eval_synthetic.py
src/nullius/: __init__.py  clock.py  contracts.py  result.py
src/nullius/forecast_eval/: __init__.py  _common.py  calibration.py  diebold_mariano.py  mincer_zarnowitz.py  qlike.py
src/nullius/leakage/: __init__.py  negative_controls.py  prefix.py  splits.py
src/nullius/metrics/: __init__.py  equity.py  inference.py
src/nullius/multiplicity/: __init__.py  dsr.py  pbo.py  trials.py
src/nullius/placebo/: __init__.py  compare.py  generators.py
src/nullius/robustness/: __init__.py  bootstrap.py  subperiod.py
tests/: conftest.py  test_edge_cases.py  test_forecast_eval.py  test_foundation.py  test_golden_parity.py  test_leakage.py  test_metrics.py  test_multiplicity.py  test_placebo.py  test_robustness.py
tests/golden/: bootstrap.json  calibration.json  dsr.json  equity.json  forecast_eval.json  pbo.json  placebo.json  subperiod.json  trial_sharpe_variance.json
