[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullius"
version = "0.0.0"
description = "Falsify-first backtest diagnostics: lookahead detection, skill placebos, honest forecast evaluation, and multiple-testing deflation. Name reserved; library in active development."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "blu3c0ral" }]
keywords = ["backtesting", "overfitting", "lookahead-bias", "falsification", "quantitative-finance"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/blu3c0ral/nullius"

[tool.hatch.build.targets.wheel]
packages = ["src/nullius"]
